scss/components-styles/App.scss
*:not(h1):not(h2) {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.1rem;
}

.video-container {
    align-self: center;
    color: whitesmoke;
    display: flex;
    flex-direction: column;
    width: 50%;
    gap: 5rem;
    padding: 0 3rem 5rem 3rem;
    > * {
        width: 100%;
    }
    video {
        box-shadow: -2px 2px 4px black;
        border-radius: 10px;
    }
}

.page-text {
    padding: 3rem 2rem;
    border-radius: 10px;
    background-color: rgba(0, 0, 0, 0.549);
    line-height: 1.5;
    color: whitesmoke;
    text-shadow: -2px 2px 10px black;
    text-align: start;
    width: 100%;
}

.page-texts-container {
    display: flex;
    flex-direction: column;
    gap: 5rem;
    padding: 0 3rem 5rem 3rem;
    align-self: center;
}
.app-container {
    background-image: url("/assets/home-page-landscape.webp");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    min-height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 5rem;
    justify-content: space-between;
}

h1 {
    font-weight: bold;
}


@media (max-width: 1024px) {
    .page-text {
        line-height: 1.6;
        padding: 2rem 1rem;
    }
    .app-container {
        background-image: url("/assets/home-page-portrait.webp");
    }
  
}
@media (max-width: 768px) {
      .video-container {
        width: 80%;
    }
}
@media (max-width: 425px) {
      .video-container {
        width: 100%;
    }
}

